dashboard-wazuh.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-ingress
  annotations:
    nginx.org/listen-ports-ssl: "443"
spec:
  ingressClassName: nginx
  rules:
  - host: wazuh.ssegning.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dashboard
            port:
              number: 443
