wazuh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.wazuh.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dashboard
            port:
              number: 443
#  - host: indexer.<your-domain>
#    http:
#      paths:
#      - pathType: Prefix
#        path: "/"
#        backend:
#          service:
#            name: indexer
#            port:
#              number: 9200
